fix: add tox docker buid commands

--- a/docker/linux/Dockerfile
+++ b/docker/linux/Dockerfile
@@ -1,23 +1,27 @@
 # Use Ubuntu 22.04 as the base image
 FROM ubuntu:22.04
 
-# Create the necessary directory
-RUN mkdir -p /ansys_inc && \
-    echo "Directory created."
+# Set environment variables
+ARG VERSION
+ARG USERNAME=mapdl
+ARG USER_UID=1000
+ARG LICENSE_SERVER
 
-# Copy distribution files to /tmp
-COPY distributions/*.tgz /tmp/
+ENV USER_GID=$USER_UID
+ENV ANSYS_VERSION=$VERSION
+ENV LICENSE_SERVER=$LICENSE_SERVER
+ENV AWP_ROOT241=/ansys_inc
+ENV WORKING_DIRECTORY=/jobs
+ENV HOME=/home/$USERNAME
+ENV ON_DOCKER=TRUE
+ENV OMPI_ALLOW_RUN_AS_ROOT=1
+ENV OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1
 
-# Update package list, install tar, and extract the .tgz files in one RUN command
-RUN apt-get update && \
-    apt-get install -y tar && \
-    cd /tmp && \
-    for file in *.tgz; do tar -xzf "$file" -C /ansys_inc; done && \
-    ls -l /ansys_inc && \
-    rm -rf /tmp/* && \
-    echo "Temporary files removed."
+# Update package list
+RUN apt-get update
 
-RUN apt-get update && apt-get install -y \
+# Install necessary packages
+RUN apt-get install -y \
     libbrotli1 \
     libbsd0 \
     libexpat1 \
@@ -48,24 +52,34 @@ RUN apt-get update && apt-get install -y \
     libxdmcp6 \
     libxext6 \
     libxkbcommon-x11-0 \
-    libxkbcommon0
+    libxkbcommon0 \
+    software-properties-common\
+    && add-apt-repository -y ppa:zeehio/libxp \
+    && apt-get update \
+    && apt-get install -y libxp6
 
-ARG VERSION
-ARG USERNAME=mapdl
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
-ARG LICENSE_SERVER
+# Create the necessary directory
+RUN mkdir -p /ansys_inc && \
+    echo "Directory created."
 
+# Create the user
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
+
+# Add a working directory and make it accessible to any user
+RUN mkdir -p /home/$USERNAME/$WORKING_DIRECTORY \
+    && chown -R $USERNAME:$USERNAME /home/$USERNAME/$WORKING_DIRECTORY \
+    && chmod a+rwx /home/$USERNAME/$WORKING_DIRECTORY
+
+# Copy distribution files to /tmp
+COPY distributions/*.tgz /tmp/
+RUN apt-get install -y tar \
+    && cd /tmp \
+    && for file in *.tgz; do tar -xzf "$file" -C /ansys_inc; done \
+    && rm -rf /tmp/*
 
 # install the product
-RUN /ansys_inc/INSTALL -silent -install_dir /ansys_inc -licserverinfo $LICENSE_SERVER
-
-
-# Storing version in an env var
-ENV ANSYS_VERSION=$VERSION
-
-# Location env var
-ENV AWP_ROOT222=/ansys_inc
+RUN /ansys_inc/INSTALL -silent -install_dir /ansys_inc -licserverinfo $LICENSE_SERVER -mechapdl
 
 # LABELS
 LABEL description="MAPDL on Ubuntu"
@@ -74,41 +88,8 @@ LABEL email="pyansys.core@ansys.com"
 # OCI LABELS
 LABEL org.opencontainers.image.documentation="https://mapdl.docs.pyansys.com"
 
-# Update packages before installing dependencies
-
-# Workaround for missing libxp.so
-RUN apt install -y software-properties-common \
-    && add-apt-repository -y ppa:zeehio/libxp \
-    && apt-get update \
-    && apt-get install -y libxp6
-
-# Create the user
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
-
 # Cleaning up unnecessary files
-RUN rm -rf /tmp/*
-
-# Setting working directory
-ENV WORKING_DIRECTORY=/jobs
-
-# Setting home directory
-ENV HOME=/home/$USERNAME
-
-# Optional License server
-# ENV LICENSE_SERVER=111.222.333.444
-# ENV ANSYSLMD_LICENSE_FILE=1055@$LICENSE_SERVER
-
-# Add a working directory and make it accessible to any user
-RUN mkdir -p /home/$USERNAME/$WORKING_DIRECTORY \
-    && chown -R $USERNAME:$USERNAME /home/$USERNAME/$WORKING_DIRECTORY \
-    && chmod a+rwx /home/$USERNAME/$WORKING_DIRECTORY
-
-# Setting other env vars
-## For MAPDL awareness
-ENV ON_DOCKER=TRUE
-ENV OMPI_ALLOW_RUN_AS_ROOT=1
-ENV OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1
+RUN rm -rf /tmp/
 
 # Adding alias to ansys executable
 RUN printf '#!/bin/bash\n/ansys_inc/v$ANSYS_VERSION/ansys/bin/mapdl "$@"' > /usr/bin/ansys && \
