--- a/docker/linux/docker-compose.yml
+++ b/docker/linux/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        VERSION: ${VERSION}
+        LICENSE_SERVER: ${LICENSE_SERVER}
     environment:
       - VERSION=${VERSION}
       - USERNAME=mapdl
