ci: checking documentation style in Examples directory too. As per: https://github.com/ansys/actions/pull/509

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,13 +95,18 @@ jobs:
 
 
   doc-style:
-    name: "Documentation style check"
+    name: "Documentation style ${{ matrix.folder }}"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        folder: ["doc", "examples"]
     steps:
       - name: "Ansys documentation style checks"
         uses: ansys/actions/doc-style@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          files: ${{ matrix.folder }}
+          vale-config: ${{ matrix.folder }}/.vale.ini
           vale-version: "3.4.1"
 
 
