--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,8 +24,8 @@ updates:
       day: "friday"
       time: "00:00"
     labels:
-      - "Maintenance"
-      - "Dependencies"
+      - "maintenance"
+      - "dependencies"
     assignees:
       - "ansys/pymapdl-maintainers"
     commit-message:
