--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,8 +24,8 @@ updates:
       day: "friday"
       time: "00:00"
     labels:
-      - "Maintenance"
-      - "Dependencies"
+      - "maintenance"
+      - "dependencies"
     assignees:
       - "ansys/pymapdl-maintainers"
     commit-message:
@@ -48,7 +48,7 @@ updates:
 
        core:
           patterns:
-            - "*ansys*"
+            - "ansys*"
             - "click"
             - "matplotlib"
             - "pexpect"
@@ -57,6 +57,7 @@ updates:
             - "scipy"
             - "tqdm"
             - "vtk"
+            - "tabulate"
 
           exclude-patterns:
             - "ansys-api-mapdl"
