--- a/.devcontainer/codespaces-dev/requirements.txt
+++ b/.devcontainer/codespaces-dev/requirements.txt
@@ -1,14 +1,14 @@
 ansys-dpf-core==0.10.1
-autopep8==2.2.0
+autopep8==2.3.1
 matplotlib==3.9.0
-scipy==1.13.1
 pandas==2.2.2
-pyiges[full]==0.3.1
-pytest==8.2.1
-pytest-cov==5.0.0
-pyvista==0.43.8
 pyansys-tools-report==0.7.3
-vtk==9.3.0
-pytest-rerunfailures==14.0
+pyiges[full]==0.3.1
+pytest-cov==5.0.0
+pytest-memprof<0.3.0
 pytest-pyvista==0.1.9
-pytest-timeout==2.3.1
+pytest-rerunfailures==14.0
+pytest==8.2.2
+pyvista==0.43.10
+scipy==1.14.0
+vtk==9.3.0
