--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -324,57 +324,27 @@ jobs:
         run: |
           .ci/display_logs.sh
 
+  build-test-matrix:
+    name: "Build matrix test"
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - id: set-matrix
+        run: .ci/build_matrix.sh
+      
+    
+  
+
   build-test:
     name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }} (Extended testing ${{ matrix.extended_testing }})"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    needs: [smoke-tests]
+    needs: [smoke-tests, build-test-matrix]
     timeout-minutes: 35
     strategy:
       fail-fast: false
-      matrix:
-        mapdl-version: [
-          'v22.2.1',
-          'v22.2-ubuntu',
-          'v23.1.0',
-          'v23.1-ubuntu',
-          'v23.2.0',
-          'v23.2-ubuntu',
-          'v24.1.0',
-          'v24.1-ubuntu',
-          'v24.1-ubuntu-student',
-          'v24.2.0',
-          'latest-ubuntu',
-          'latest-ubuntu-student',
-          ]
-        extended_testing:
-          - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-        exclude:
-          # In PRs skipping all MAPDL version except student ones (commented out).
-          - extended_testing: false
-            mapdl-version: 'v22.2.1'
-          - extended_testing: false
-            mapdl-version: 'v22.2-ubuntu'
-          - extended_testing: false
-            mapdl-version: 'v23.1.0'
-          - extended_testing: false
-            mapdl-version: 'v23.1-ubuntu'
-          - extended_testing: false
-            mapdl-version: 'v23.2.0'
-          - extended_testing: false
-            mapdl-version: 'v23.2-ubuntu'
-          - extended_testing: false
-            mapdl-version: 'v24.1.0'
-          - extended_testing: false
-            mapdl-version: 'v24.1-ubuntu'
-          # - extended_testing: false
-          #   mapdl-version: 'v24.1-ubuntu-student'
-          - extended_testing: false
-            mapdl-version: 'v24.2.0'
-          - extended_testing: false
-            mapdl-version: 'latest-ubuntu'
-          # - extended_testing: false
-          #   mapdl-version: 'latest-ubuntu-student'
+      matrix: ${{fromJson(needs.build-test-matrix.outputs.matrix)}}
 
     env:
       PYMAPDL_PORT: 21000  # default won't work on GitHub runners
