feat: adding checkout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -330,6 +330,8 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+      - name: "Install Git and checkout project"
+        uses: actions/checkout@v4.1.7
       - id: set-matrix
         run: .ci/build_matrix.sh
 
