test: checks if github context is accessible from shell script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -327,18 +327,27 @@ jobs:
   build-test-matrix:
     name: "Build matrix test"
     runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: "Install Git and checkout project"
         uses: actions/checkout@v4.1.7
+      
+      - name: Check if author it is organization member
+        id: is_organization_member
+        uses: JamesSingleton/is-organization-member@1.0.0
+        with:
+          organization: ansys
+          username: ${{ github.event.issue.user.login }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - id: set-matrix
         run: .ci/build_matrix.sh
 
   build-test:
     name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }} (Extended testing ${{ matrix.extended_testing }})"
     runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-matrix]
     timeout-minutes: 35
     strategy:
