--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -339,7 +339,7 @@ jobs:
         uses: JamesSingleton/is-organization-member@1.0.0
         with:
           organization: ansys
-          username: ${{ github.event.issue.user.login }}
+          username: ${{ github.event.pull_request.user.login }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - id: set-matrix
