feat: checking in a script which test should be generated.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -343,6 +343,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - id: set-matrix
+        env:
+          extended_testing: ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
+          auth_user: ${{ steps.is_organization_member.outputs.result == 'false' }}
         run: .ci/build_matrix.sh
 
   build-test:
