--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -333,19 +333,19 @@ jobs:
     steps:
       - name: "Install Git and checkout project"
         uses: actions/checkout@v4.1.7
-      
-      - name: Check if author it is organization member
+
+      - uses: tspascoal/get-user-teams-membership@v3
         id: is_organization_member
-        uses: JamesSingleton/is-organization-member@1.0.0
         with:
+          username: ${{ github.actor }}
           organization: ansys
-          username: ${{ github.event.pull_request.user.login }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          team: 'pymapdl-developers'
+          GITHUB_TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
       - id: set-matrix
         env:
           extended_testing: ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-          auth_user: ${{ steps.is_organization_member.outputs.result == 'true' }}
+          auth_user: ${{ steps.is_organization_member.outputs.isTeamMember == 'true' }}
         run: .ci/build_matrix.sh
 
   build-test:
