--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -324,8 +324,8 @@ jobs:
         run: |
           .ci/display_logs.sh
 
-  build-test-matrix:
-    name: "Build matrix test"
+  build-test-remote-matrix:
+    name: "Build remote test matrix"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     outputs:
@@ -348,14 +348,14 @@ jobs:
           auth_user: ${{ steps.is_organization_member.outputs.isTeamMember == 'true' }}
         run: .ci/build_matrix.sh
 
-  build-test:
+  build-test-remote:
     name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }} (Extended testing ${{ matrix.extended_testing }})"
     runs-on: ubuntu-latest
-    needs: [smoke-tests, build-test-matrix]
+    needs: [smoke-tests, build-test-remote-matrix]
     timeout-minutes: 35
     strategy:
       fail-fast: false
-      matrix: ${{fromJson(needs.build-test-matrix.outputs.matrix)}}
+      matrix: ${{fromJson(needs.build-test-remote-matrix.outputs.matrix)}}
 
     env:
       PYMAPDL_PORT: 21000  # default won't work on GitHub runners
@@ -521,35 +521,42 @@ jobs:
         run: |
           .ci/display_logs.sh
 
-  build-test-ubuntu:
-    name: "Local: Build & test on Ubuntu MAPDL ${{ matrix.mapdl-image }} (Extended testing ${{ matrix.extended_testing }})"
+  build-test-local-minimal-matrix:
+    name: "Build test matrix for minimal and local"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    needs: [smoke-tests]
-    timeout-minutes: 55
     outputs:
-      pushed: ${{ steps.attatch-to-pr.outputs.pushed }}
-      committed: ${{ steps.attatch-to-pr.outputs.committed }}
-      commit_long_sha: ${{ steps.attatch-to-pr.outputs.commit_long_sha }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: "Install Git and checkout project"
+        uses: actions/checkout@v4.1.7
+
+      - uses: tspascoal/get-user-teams-membership@v3
+        id: is_organization_member
+        with:
+          username: ${{ github.actor }}
+          organization: ansys
+          team: 'pymapdl-developers'
+          GITHUB_TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+
+      - id: set-matrix
+        env:
+          LIMIT_VERSIONS: 3
+          extended_testing: ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
+          auth_user: ${{ steps.is_organization_member.outputs.isTeamMember == 'true' }}
+        run: .ci/build_matrix.sh
+
+  build-test-ubuntu-local:
+    name: "Local: Build & test ${{ matrix.mapdl-image }})"
+    runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    needs: [smoke-tests, build-test-local-minimal-matrix]
+    timeout-minutes: 55
     strategy:
       fail-fast: false
       matrix:
-        mapdl-image: [
-          'v23.2-ubuntu', 
-          'v24.1-ubuntu', 
-          'v24.1-ubuntu-student',
-          'latest-ubuntu',
-          'latest-ubuntu-student',
-          ]
-        extended_testing:
-          - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-        exclude:
-          - extended_testing: false
-            mapdl-image: 'v23.2-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'v24.1-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'latest-ubuntu'
+        matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
+
     container:
       image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
@@ -664,27 +671,11 @@ jobs:
     name: "Local: Build & test minimal setup on Ubuntu MAPDL ${{ matrix.mapdl-image }} (Extended testing ${{ matrix.extended_testing }})"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    needs: [smoke-tests]
+    needs: [smoke-tests, build-test-local-minimal-matrix]
     timeout-minutes: 55
     strategy:
       fail-fast: false
-      matrix:
-        mapdl-image: [
-          'v23.2-ubuntu',
-          'v24.1-ubuntu',
-          'v24.1-ubuntu-student',
-          'latest-ubuntu',
-          'latest-ubuntu-student',
-          ]
-        extended_testing:
-          - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-        exclude:
-          - extended_testing: false
-            mapdl-image: 'v23.2-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'v24.1-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'latest-ubuntu'
+      matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
     container:
       image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
@@ -840,7 +831,7 @@ jobs:
 
   package:
     name: "Package library"
-    needs: [build-test, build-test-ubuntu, build-test-ubuntu-minimal, docs-build]
+    needs: [build-test-remote, build-test-ubuntu-local, build-test-ubuntu-minimal, docs-build]
     runs-on: ubuntu-latest
     steps:
       - name: "Build library source and wheel artifacts"
@@ -952,7 +943,7 @@ jobs:
 
   notify:
     name: "Notify failed build"
-    needs: [smoke-tests, docs-build, build-test, build-test-ubuntu, build-test-ubuntu-minimal]
+    needs: [smoke-tests, docs-build, build-test-remote, build-test-ubuntu-local, build-test-ubuntu-minimal]
     if: failure() && github.event_name == 'schedule'
     runs-on: ubuntu-latest
     steps:
