--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -349,13 +349,13 @@ jobs:
         run: .ci/build_matrix.sh
 
   build-test-remote:
-    name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }} (Extended testing ${{ matrix.extended_testing }})"
+    name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     needs: [smoke-tests, build-test-remote-matrix]
     timeout-minutes: 35
     strategy:
       fail-fast: false
-      matrix: ${{fromJson(needs.build-test-remote-matrix.outputs.matrix)}}
+      matrix: ${{ fromJson(needs.build-test-remote-matrix.outputs.matrix) }}
 
     env:
       PYMAPDL_PORT: 21000  # default won't work on GitHub runners
@@ -552,7 +552,7 @@ jobs:
         run: .ci/build_matrix.sh
 
   build-test-ubuntu-local:
-    name: "Local: Build & test on ${{ matrix.mapdl-image }}"
+    name: "Local: Build & test on ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-local-minimal-matrix]
@@ -562,7 +562,7 @@ jobs:
       matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
 
     container:
-      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
+      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-version }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
       credentials:
         username: ${{ github.actor }}
@@ -624,7 +624,7 @@ jobs:
           xvfb-run pytest -k "not test_dpf" \
             ${{ env.PYTEST_ARGUMENTS }} \
             --reset_only_failed --add_missing_images \
-            --cov-report=xml:${{ matrix.mapdl-image }}-local.xml
+            --cov-report=xml:${{ matrix.mapdl-version }}-local.xml
 
       - name: "Adding the directory as safe directory for later step"
         run: |
@@ -661,18 +661,18 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # required
           root_dir: ${{ github.workspace }}
-          name: ${{ matrix.mapdl-image }}-local.xml
-          flags: ubuntu,local,${{ matrix.mapdl-image }}
+          name: ${{ matrix.mapdl-version }}-local.xml
+          flags: ubuntu,local,${{ matrix.mapdl-version }}
 
       - name: "Upload coverage artifacts"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.mapdl-image }}-local.xml
-          path: ./${{ matrix.mapdl-image }}-local.xml
+          name: ${{ matrix.mapdl-version }}-local.xml
+          path: ./${{ matrix.mapdl-version }}-local.xml
 
 
   build-test-ubuntu-minimal:
-    name: "Local-minimal: Build & test on ${{ matrix.mapdl-image }}"
+    name: "Local-minimal: Build & test on ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-local-minimal-matrix]
@@ -681,7 +681,7 @@ jobs:
       fail-fast: false
       matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
     container:
-      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
+      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-version }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
       credentials:
         username: ${{ github.actor }}
@@ -730,10 +730,10 @@ jobs:
           # Because there is no 'ansys-tools-path' we need to input the
           # executable path with the env var: PYMAPDL_MAPDL_EXEC.
 
-          if [[ "${{ matrix.mapdl-image }}" == *"latest-ubuntu"* ]] ; then
+          if [[ "${{ matrix.mapdl-version }}" == *"latest-ubuntu"* ]] ; then
             version="242"
           else
-            version=$(echo "${{ matrix.mapdl-image }}" | head -c 5 | tail -c 4 | tr -d '.')
+            version=$(echo "${{ matrix.mapdl-version }}" | head -c 5 | tail -c 4 | tr -d '.')
           fi;
 
           echo "$version"
@@ -744,21 +744,21 @@ jobs:
           unset PYMAPDL_START_INSTANCE
           pytest -k "not test_dpf" \
             ${{ env.PYTEST_ARGUMENTS }} \
-            --cov-report=xml:${{ matrix.mapdl-image }}-minimal.xml
+            --cov-report=xml:${{ matrix.mapdl-version }}-minimal.xml
 
       - uses: codecov/codecov-action@v4
         name: "Upload coverage to Codecov"
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # required
           root_dir: ${{ github.workspace }}
-          name: ${{ matrix.mapdl-image }}-minimal.xml
-          flags: ubuntu,local,${{ matrix.mapdl-image }},minimal
+          name: ${{ matrix.mapdl-version }}-minimal.xml
+          flags: ubuntu,local,${{ matrix.mapdl-version }},minimal
 
       - name: "Upload coverage artifacts"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.mapdl-image }}-minimal.xml
-          path: ./${{ matrix.mapdl-image }}-minimal.xml
+          name: ${{ matrix.mapdl-version }}-minimal.xml
+          path: ./${{ matrix.mapdl-version }}-minimal.xml
 
 
   test-windows:
