--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -42,23 +42,23 @@
   description: "No further development until this is fixed"
   color: C0392B
 
-- name: Critical Priority
+- name: critical priority
   description: "This issue affects almost all users"
   color: E67E22
 
-- name: Major Priority
+- name: major priority
   description: "This issue affects some users"
   color: F4D03F
 
-- name: Minor Priority
-  description: "It does not affect almost any users"
+- name: minor priority
+  description: "This issue affects few users"
   color: F9E79F
 
-- name: Future
+- name: future
   description: "To work on it in the future, since it can be delayed"
   color: 27AE60
 
-- name: Won't fix
+- name: won't fix
   description: "For different reasons, this won't be fixed"
   color: ffffff
 
@@ -102,23 +102,23 @@
 # Issue management
 # ================
 
-- name: Duplicate
+- name: duplicate
   description: "Duplicated issue"
   color: E67E22
 
-- name: Good First Issue
+- name: good first issue
   description: "Best way to start working on PyMAPDL development"
   color: 27AE60
 
-- name: Help wanted!
+- name: help wanted!
   description: "Tell the developers you need help or guidance"
   color: F4D03F
 
-- name: Stale
-  description: "Stale issue, it will be closed soon"
+- name: stale
+  description: "Stale issue likely to be closed soon"
   color: E67E22
 
-- name: Waiting doc review
+- name: waiting doc review
   description: "This PR is waiting for its documentation to be reviewed."
   color: 27AE60
 
@@ -147,6 +147,6 @@
   description: "Related to the reminder bot"
   color: ffffff
 
-- name: Build failed
+- name: build failed
   description: "Schedule build fails"
   color: E67E22
