--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
 
 
   smoke-tests:
-    name: "Build and smoke test (${{ matrix.os }} | Python ${{ matrix.python-version }}) (Release=${{ matrix.should-release }})"
+    name: "${{ matrix.os }} | Py ${{ matrix.python-version }} | Rel ${{ matrix.should-release }}"
     runs-on: ${{ matrix.os }}
     if: github.ref != 'refs/heads/main'
     timeout-minutes: 20
@@ -349,7 +349,7 @@ jobs:
         run: .ci/build_matrix.sh
 
   build-test-remote:
-    name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }}"
+    name: "Remote: ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     needs: [smoke-tests, build-test-remote-matrix]
     timeout-minutes: 35
@@ -552,7 +552,7 @@ jobs:
         run: .ci/build_matrix.sh
 
   build-test-ubuntu-local:
-    name: "Local: Build & test on ${{ matrix.mapdl-version }}"
+    name: "Local: ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-local-minimal-matrix]
@@ -672,7 +672,7 @@ jobs:
 
 
   build-test-ubuntu-minimal:
-    name: "Local-minimal: Build & test on ${{ matrix.mapdl-version }}"
+    name: "Local-min: ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-local-minimal-matrix]
@@ -960,7 +960,7 @@ jobs:
 
 
   test_julia:
-    name: "Test julia implementation"
+    name: "Julia ${{ matrix.julia-version }} | ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     strategy:
