build: update requirements in devcontainer directory (#3217)
* chore: reog dependencies order.
Removing 'trame' for 'jupyter' optional dependency

* build: update devcontainer requirements

* Adding changelog entry: 3217.dependencies.md

---------

Co-authored-by: pyansys-ci-bot <pyansys.github.bot@ansys.com>

--- a/.devcontainer/codespaces-docs/requirements.txt
+++ b/.devcontainer/codespaces-docs/requirements.txt
@@ -1,10 +1,9 @@
-sphinx==7.3.7
 ansys-dpf-core==0.10.1
 ansys-mapdl-reader==0.53.0
-ansys-sphinx-theme==0.16.4
-grpcio==1.64.0
-imageio-ffmpeg==0.4.9
-imageio==2.34.1
+ansys-sphinx-theme==0.16.6
+grpcio==1.64.1
+imageio-ffmpeg==0.5.1
+imageio==2.34.2
 jupyter_sphinx==0.5.3
 jupyterlab>=3.2.8
 matplotlib==3.9.0
@@ -15,12 +14,16 @@ pyiges[full]==0.3.1
 pypandoc==1.13
 pytest-sphinx==0.6.3
 pythreejs==2.4.2
-pyvista[trame]==0.43.8
+pyvista[trame]==0.43.10
 sphinx-autobuild==2024.4.16
 sphinx-autodoc-typehints==1.25.2
 sphinx-copybutton==0.5.2
+sphinx-design==0.6.0
+sphinx-design==0.6.0
 sphinx-gallery==0.16.0
+sphinx-notfound-page==1.0.2
+sphinx-reredirects==0.1.4
+sphinx==7.3.7
 sphinxcontrib-websupport==1.2.7
 sphinxemoji==0.3.1
 vtk==9.3.0
-sphinx-design==0.6.0
