--- a/.devcontainer/devcontainer-local/requirements.txt
+++ b/.devcontainer/devcontainer-local/requirements.txt
@@ -1,6 +1,7 @@
 ansys-dpf-core==0.10.1
 ansys-mapdl-reader==0.53.0
 ansys-sphinx-theme==0.16.6
+ansys-tools-visualization-interface==0.2.6
 autopep8==2.3.1
 grpcio==1.64.1
 imageio-ffmpeg==0.5.1
@@ -21,8 +22,6 @@ pytest-rerunfailures==14.0
 pytest-sphinx==0.6.3
 pytest==8.2.2
 pythreejs==2.4.2
-pyvista[jupyter]==0.43.10
-pyvista==0.43.10
 scipy==1.14.0
 sphinx-autobuild==2024.4.16
 sphinx-autodoc-typehints==1.25.2
