fix: revert pick test changes, revert hook deletion

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,11 @@ fail_fast: True
 
 repos:
 
+- repo: https://github.com/ansys/pre-commit-hooks
+  rev: v0.3.1
+  hooks:
+  - id: add-license-headers
+
 - repo: https://github.com/pycqa/isort
   rev: 5.13.2
   hooks:
