chore: update gitignore to avoid any .venv* and venv* directory

--- a/.gitignore
+++ b/.gitignore
@@ -84,9 +84,9 @@ docker/mapdl/*.sh
 tmp.out
 
 # virtual environment
-venv/
+venv*
 .venv/
-.venv
+.venv*
 
 # Visual studio code local settings
 .vscode/
