--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ env:
   DPF_PORT: 21004
   MAPDL_PACKAGE: ghcr.io/ansys/mapdl
   ON_CI: True
-  PYTEST_ARGUMENTS: '-vvv -ra --durations=5 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html'
+  PYTEST_ARGUMENTS: '-vvv -ra --durations=10 --maxfail=3 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html'
 
   # Following env vars when changed will "reset" the mentioned cache,
   # by changing the cache file name. It is rendered as ...-v%RESET_XXX%-...
@@ -603,7 +603,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-local-minimal-matrix]
-    timeout-minutes: 120
+    timeout-minutes: 55
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
@@ -737,7 +737,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     needs: [smoke-tests, build-test-local-minimal-matrix]
-    timeout-minutes: 120
+    timeout-minutes: 55
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
