--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,7 @@ ignore:
   - "src/ansys/mapdl/core/_commands"
   - "src/ansys/mapdl/core/jupyter.py"
   - "src/ansys/mapdl/core/mapdl_console.py"
+  - "src/ansys/mapdl/core/mapdl_inprocess.py"
 
 comment:
   layout: "diff"
