--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,13 +76,15 @@ doc = [
     "ansys-dpf-core==0.10.1",
     "ansys-mapdl-reader==0.54.1",
     "ansys-tools-visualization-interface==0.4.4",
-    "ansys-sphinx-theme==1.0.11",
+    "ansys-sphinx-theme@git+https://github.com/ansys/ansys-sphinx-theme.git@fix/test-cheatsheet",
     "grpcio==1.66.1",
     "imageio-ffmpeg==0.5.1",
     "imageio==2.35.1",
+    "jupyter==1.1.1",
     "jupyter_sphinx==0.5.3",
     "jupyterlab>=3.2.8",
     "matplotlib==3.9.2",
+    "nbformat==5.10.4",
     "numpydoc==1.8.0",
     "pandas==2.2.2",
     "plotly==5.24.1",
@@ -90,7 +92,7 @@ doc = [
     "pypandoc==1.13",
     "pytest-sphinx==0.6.3",
     "pythreejs==2.4.2",
-    "sphinx-autobuild==2024.9.19",
+    "sphinx-autobuild==2024.9.3",
     "sphinx-autodoc-typehints==1.25.2",
     "sphinx-copybutton==0.5.2",
     "sphinx-design==0.6.1",
