--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ doc = [
     "ansys-dpf-core==0.10.1",
     "ansys-mapdl-reader==0.54.1",
     "ansys-tools-visualization-interface==0.4.4",
-    "ansys-sphinx-theme@git+https://github.com/ansys/ansys-sphinx-theme.git@fix/test-cheatsheet",
+    "ansys-sphinx-theme==1.1.1",
     "grpcio==1.66.1",
     "imageio-ffmpeg==0.5.1",
     "imageio==2.35.1",
